overivew: Fix close button ripple black.

Test: manual
Bug: 866376
Change-Id: I5527ea59fadfd4ecdd1eb3a9473a72b618a1ab53
Reviewed-on: https://chromium-review.googlesource.com/1153970
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578858}
Former-commit-id: e035b8ceeea1f472b823331d17caeab394ac5c33